# SolidsPy-Opt

./: AUTHORS.rst  CONTRIBUTING.rst  LICENSE  README.md  README.rst  pyproject.toml
.github/workflows/: python-publish.yml
docs/: conf.py  index.rst  installation.rst  modules.rst  requirements.txt  tutorial.rst  usage.rst
docs/tutorials/: tutorial_beso.rst  tutorial_eso_stiff.rst  tutorial_eso_stress.rst  tutorial_simp.rst
examples/: beso.ipynb  eso_stiff.ipynb  eso_stress.ipynb  simp.ipynb
paper/: paper.bib
src/solidspy_opt/: download_weights.py  optimize.py  test_opt.ipynb  test_opt.py  test_opt1.py  test_opt2.py  test_opt3.py  test_opt4.py  testtest.py
src/solidspy_opt/Utils/: __init__.py  beams.py  volumes.py
src/solidspy_opt/utils/: __init__.py  solver.py  structures.py  volumes.py
tests/: test_optimize.py
